# surajashray_WellnessTrack

./: .dockerignore  .env  .gitignore  APPROACH_OVERVIEW.md  Dockerfile  README.md  docker-compose.yml  fast-api_structure.py  main.py  pyproject.toml  report_final_output.json  requirements.txt
app/: config.py  main.py
app/api/v1/endpoints/: lab_report.py  meal_scaner.py
app/model/: crnn_mobilenet_v3_large_pt.pt  db_resnet50.pt
app/schemas/: meal_evaluation.py  mealstate.py  schema.py
app/services/: meal_analyzer.py  meal_graph.py
app/services/lab_report/graph/: graph.py
app/services/lab_report/llms/: onenai_llm.py
app/services/lab_report/nodes/: node.py
app/services/lab_report/ocr/: ocr.py
app/services/lab_report/state/: state.py
app/utils/: helper.py  logger.py
